--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Django==3.1.5
 django-cors-headers==3.6.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
-djangorestframework-simplejwt==4.6.0
+# djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 idna==2.10
 importlib-metadata==1.7.0
