--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ gunicorn==20.0.4
 idna==2.10
 importlib-metadata==1.7.0
 itypes==1.2.0
+jwt==1.7.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
